# final-proj-graphs

./: README.md  final.ipynb  graphs.ipynb  preliminary.ipynb  pyproject.toml
JSONlogs/: analysis_convTiny4Lewis_next_flowers_tripletloss_tripletdata_epadam_lr25_m0_0001_bs0_9_w8_h224_seed224.json  analysis_matBasePre_next_flowers_tripletloss_tripletdata_epadam_lr25_m0_0001_bs0_9_w8_h224_seed224.json  analysis_matBase_next_flowers_quadrupletloss_quadrupletdata_epadam_lr25_m0_0001_bs0_9_w8_h224_seed224.json  analysis_matBase_next_flowers_tripletloss_tripletdata_epadam_lr25_m0_0001_bs0_9_w8_h224_seed224.json  analysis_matLargePre_next_flowers_tripletloss_tripletdata_epadam_lr15_m0_0001_bs0_9_w8_h224_seed224.json  analysis_matLarge_next_flowers_tripletloss_tripletdata_epadam_lr15_m0_0001_bs0_9_w8_h224_seed224.json  analysis_matPre_next_flowers_quadrupletloss_quadrupletdata_epadam_lr25_m0_0001_bs0_9_w32_h224_seed224.json  analysis_matPre_next_flowers_tripletloss_tripletdata_epadam_lr25_m0_0001_bs0_9_w32_h224_seed224.json  analysis_matPre_resnet_flowers_quadrupletloss_quadrupletdata_epadam_lr25_m0_0001_bs0_9_w32_h224_seed224.json  analysis_matPre_resnet_flowers_tripletloss_tripletdata_epadam_lr25_m0_0001_bs0_9_w32_h224_seed224.json  analysis_mat_next_flowers_quadrupletloss_quadrupletdata_epadam_lr25_m0_0001_bs0_9_w32_h224_seed224.json  analysis_mat_next_flowers_tripletloss_tripletdata_epadam_lr25_m0_0001_bs0_9_w32_h224_seed224.json  analysis_mat_resnet_flowers_contrastiveloss_contrastivedata_epadam_lr25_m0_0001_bs0_9_w32_h224_seed224.json  melasViTPre.json  (+4 more)
(+17 files in other folders)
